added a little bootstrap and css for better looks. still rough

--- a/artistSPA/spa.html
+++ b/artistSPA/spa.html
@@ -1,12 +1,41 @@
 <!doctype html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Ryan Postma" content="">
+
   <title>Artist SPA</title>
-  <script type="text/javascript" src=
-    "http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
-  </script>
+
+  <!-- compiled and minified CSS bootstrap -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+  <!-- bootstrap social network -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.9.0/bootstrap-social.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+  <!-- jQuery UI -->
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
+  <!-- Latest compiled JavaScript bootstrap -->
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <!--my css files -->
+  <link href="css/spa.css" rel="stylesheet">
+
+  <!-- my own js files -->
   <script src="js/spa.js"       ></script>
   <script src="js/spa.shell.js" ></script>
+
+  </script>
+
   <script>
     $(function () { spa.initModule( $('#spa') ); });
   </script>
