--- a/artistSPA/baseServercode/html/index.html
+++ b/artistSPA/baseServercode/html/index.html
@@ -40,7 +40,15 @@
  <!-- This next script is "just pretend" for socket.io -->
  <script src="/socket.io/socket.io.js"></script>
  <script src="../js/spa.seo.js"></script>
-
+ <!--
+ <script>
+  var socket = io.connect('http://localhost:8000');
+  socket.on('news', function (data) {
+    console.log(data);
+    socket.emit('my other event', { my: 'data' });
+  });
+</script>
+-->
  <!-- Let's get started -->
  <script>
   $(function() {
